Small fix on mobile search modal (iOS / Safari).

--- a/src/assets/stylesheets/header.scss
+++ b/src/assets/stylesheets/header.scss
@@ -149,6 +149,7 @@ input#location {
       #location {
         border-radius: 0;
         padding-left: 17px;
+        line-height: 30px;
       }
 
       .location-search-results {
